# Flash

./: README.md  pyproject.toml  requirements-dev.txt  run.py
.github/actions/setup-shellmind/: action.yml
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
app/: ai.py  tools.py
docs/: CONFIGURATION.md
flash/: ai.py  system_prompt.txt  tools.py
shellmind/: __main__.py  ai.py  tools.py
tests/: test_ai.py  test_tools.py
