[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shellmind"
version = "0.1.0"
description = "An AI-powered command-line interface that bridges natural language and shell execution."
authors = [
    { name = "Natuworkguy" },
]
dependencies = [
    "colorama",
    "google-generativeai",
    "pyfiglet",
    "python-dotenv",
    "rich",
]
requires-python = ">=3.10"

[project.scripts]
shellmind = "shellmind.ai:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shellmind*"]
