[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flash"
version = "0.1.0"
description = "FLASH CLI"
authors = [
    { name = "Natuworkguy" },
]
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.10"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[project.scripts]
flash = "flash.ai:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flash*"]
